resend email function

--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
         </div>
         <p>Hi %user_name%,</p>
         <p>
-          Thank you for signing up on Eliger! We're excited to have you on board and will be happy
+          Thank you for signing up on EmailJS! We're excited to have you on board and will be happy
           to help you set everything up.
         </p>
         <p>
@@ -42,13 +42,13 @@
               background-color: #4460aa;
               color: #ffffff;
             "
-            href="http://localhost:3000/verification?verify=%code%"
+            href="https://dashboard.emailjs.com/confirm-email/MzY4MzI0/5q4juoytCG"
             rel="noopener"
             target="_blank"
             >Verify email</a
           >
         </p>
-        <p>This link will expire in 24 hours.</p>
+        <p>This link will expire in 48 hours.</p>
         <p>
           If you're having trouble clicking the button, copy and paste the URL below into your
           browser:
@@ -56,10 +56,10 @@
         <p>
           <a
             style="color: #4460aa"
-            href="http://localhost:3000/verification?verify=%code%"
+            href="https://dashboard.emailjs.com/confirm-email/MzY4MzI0/5q4juoytCG"
             rel="noopener"
             target="_blank"
-            >http://localhost:3000/verification?verify=%code%</a
+            >https://dashboard.emailjs.com/confirm-email/MzY4MzI0/5q4juoytCG</a
           >
         </p>
         <p>
